feat: add request validation  (#9)
